<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">iSimple</string>
    <string name="search_hint"/>
    <string name="message_not_found">По Вашему запросу ничего не найдено</string>
    <string name="text_for_retail_price">Розничная цена: %s</string>
    <string name="old_price">Старая цена:</string>
    <string name="dialog_message">По данному штрихкоду ничего не найдено.</string>
    <string name="dialog_button_ok">OK</string>
    <string name="dialog_button_yes">Да</string>
    <string name="dialog_button_no">Нет</string>
    <string name="title_dialog_instal_scaner">Установить Barcode Scanner?</string>
    <string name="message_dialog_instal_scaner">Для этого приложения требуется сканер штрих-кода. Хотели бы Вы его установить?</string>
    <string name="favorite_title">Избранное</string>
    <string name="send_mail_title">Mail</string>
    <string name="subject_mail">Мне понравился напиток в приложении iSimple.</string>
    <string name="title_dialog_send_mail">Send mail</string>
    <string name="mail_template" formatted="false" ><![CDATA[<html><p><b>%s</b><br><font color="#6f6f6f">%s</font></p><p><font color="#ec068d">%s</font></p><p>%s, %s</p><p><font color="#6f6f6f">Объем: </font>%s<br><font color="#6f6f6f">Крепость: </font>%s %% об<br><font color="#6f6f6f">Производитель: </font>%s<br><font color="#6f6f6f">Артикул: </font>%s<br></p><p>Подробнее об этом напитке можно узнать на  <font color="#ec068d"><a href="http://simplewine.ru/product_xml_id/%s/?doc_name=ISIMPLE">сайте Simple</a></font>.</p><p>Отправлено с Android</p></html>]]></string>
    <string name="favourites_empty_items">Вы можете добавить в Избранное понравившиеся вам напитки, найденные через <font fgcolor="#fffc0fc0">Каталог</font> или на страницах магазинов</string>
    <string name="button_catalog">Каталог</string>
    <string name="load_route_dialog_progress_message">Идёт прокладывание маршрута…</string>
    <string name="error_dialog_title">Ошибка</string>
    <string name="error_route_create_dialog_message">Не удается проложить маршрут, проверьте подключение к интернету…</string>
    <string name="delete">Удалить</string>
    <string name="not_found_mail_cleint">Нет почтовых клиентов</string>
    <string name="empty_shopping_list">Вы ещё ничего не выбрали</string>
    <string name="create_order_btn_label">Заказать</string> 

    <string name="not_found_barcode">По данному штрихкоду ничего не найдено.</string>

    <string name="title_contact_data_order_dialog">Введите контактные данные</string>
    <string name="title_first_step_order_dialog">Выберите способ связи</string>
    <string name="title_contact_phone_order_dialog">Контактный номер</string>
    <string name="title_contact_email_order_dialog">Контактный электронный адрес</string>
    <string name="dialog_order_button_complite">Готово</string>
    <string name="dialog_order_button_cancel">Отмена</string>
    <string name="shared_secret">a338b2e5aa433f461398e4d5ccf64e33195dc4f4fc29f23086f8048de677216aaf5e27f868b74b3501605981997bb0620f047c3ecf2508b9bbf1eed12d07de27</string>
    <string name="url_send_order">https://www.simple.ru/isimple_service/order.php</string>
    <string name="registration_orders">Регистрация заказа</string>
    <string name="message_success_send_orders"><![CDATA[<br><br>Спасибо за заказ!<br><br>Заказ %1$s отправлен. Наши менеджеры скоро<br/>свяжутся с вами.<br><br>]]></string>
    <string name="message_not_success_send_orders"><![CDATA[<br><br>Извините!<br><br>Сервер перегружен<br>попробуйте позже.<br><br>]]></string>

    <string name="shopping_cart_delete_all_btn_label">Очистить</string>
    <string name="shopping_cart_delivery_btn_label">Delivery</string>
    <string name="lbl_where_place_cart">Где забрать свой заказ?</string>

    <string name="message_offline">Отсутствует подключение к интернет</string>
    <string name="message_empty_orders">Отсутвуют заказы</string>
    <string name="delivery_dialog_title">Выберите зону доставки</string>

    <string name="section_featured">Витрина</string>
    <string name="section_result_filtered_search">Результаты поиска</string>
    <string name="section_pre_order">Предзаказ</string>
    <string name="section_all_in_stock">Все в наличии</string>

    <string name="update_data_notify_label">Обновление данных iSimple</string>
    <string name="update_data_content_label">Доступно обновление данных</string>
    <string name="update_data_notify_warning_label">SdCard извлечена!</string>
    <string name="update_data_notify_content_warning">Обновление данных iSimple недоступно. SdCard извлечена!</string>
    <string name="update_data_wait_label">Пожалуйста, подождите…</string>
    <string name="crash_dialog_text">Упс! В работе программы iSimple произошла непредвиденная ошибка. Для отправки деталей об ошибке команде разработчиков нажмите кнопку "Да". Приносим свои извинения!</string>
    <string name="crash_dialog_title">Ошибка iSimple</string>

    <string name="cancel_delete_item">Отмена</string>

    <string name="title_about_info">Информация о программе</string>
    <string name="catalog_date_update">01.06.2014</string>
    <string name="price_date_update">11.06.2014</string>
    <string name="date_update">01.06.2014</string>
    <string name="about_info" formatted="false"><![CDATA[<p><p>Версия приложения<br><b>Номер версии:</b> %s</p><p>Обновление каталога<br><b>Время:</b> %s</p><p>Обновление цен<br><b>Время:</b> %s</p><p>Последенее обновление<br><b>Время:</b> %s</p></p>]]></string>

    <!-- Water filter item -->
    <string name="btn_water">Вода</string>
    <string name="btn_juice">Соки</string>
    <string name="btn_energetik">Энергетик</string>
    <string name="btn_bar">Для бара</string>

    <string name="lbl_not_found">Ничего не нашлось. Попробуйте другие параметры поиска.</string>

    <string name="lbl_porto">Порто</string>
    <string name="lbl_heres">Херес</string>
    <string name="lbl_year_item">Год урожая</string>
    <string name="lbl_sweetnes_item">Тип вина</string>
    <string name="lbl_country_item">Страна/Регион</string>
    <string name="lbl_style_sake_item">Стиль/Премиальность</string>
    <string name="lbl_manufacture_item">Производитель</string>
    <string name="lbl_type_drink">Тип напитка</string>
    <string name="lbl_extend_filter">Открыть дополнительные фильтры</string>
	
	<string name="sync_state_prices_downloading">Загрузка цен</string>
    <string name="sync_state_new_items_downloading" formatted="false">Загрузка новых позиций: %s из %s</string>
    <string name="sync_state_old_items_deleting">Удаление неактуальных позиций</string>
    <string name="sync_state_prices_installing">Применение новых цен</string>
    <string name="sync_state_locations_and_chains_update">Обновление адресов магазинов</string>
    <string name="sync_state_item_availability_update">Обновление наличия позиций</string>
	<string name="sync_state_discounts_update">Обновление скидок</string>
	<string name="sync_state_featured_update">Обновление акций</string>
	<string name="sync_state_offers_update">Обновление предложений</string>
	<string name="sync_state_delivery_update">Обновление данных доставки</string>
	
	<string name="sync_error_update_index_error">Невозможно прочитать файл Update-Index</string>
	<string name="sync_error_item_prices_error">Невозможно прочитать файл {}</string>
	
	<string name="aerated">газированная</string>
	<string name="non_aerated">негазированная</string>
	<string name="single_item_price">%s за бутылку</string>
	<string name="water_volume">Продается упаковкой по %sшт.</string>
	
	<string name="name">Имя</string>
	<string name="email">Email</string>
    <string name="view_holder">View Holder</string>
    <string name="tag_cursor">Tag cursor</string>

</resources>