<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
        <Button
                android:layout_width="0dip"
                android:layout_height="50dip"
                android:layout_weight="0.495"
                android:text="@string/btn_water"
                android:textColor="@color/product_text_color1"
                android:background="@android:color/white"
                android:textSize="20sp"
                android:id="@+id/btn_water"/>

        <RelativeLayout
                android:layout_width="0dip"
                android:layout_height="50dip"
                android:layout_weight="0.01"
                android:background="@android:color/white">

            <View
                    android:layout_height="48dip"
                    android:layout_width="1dip"
                    android:background="@color/product_text_color1"
                    android:layout_centerInParent="true"/>

        </RelativeLayout>

        <Button
                android:layout_width="0dip"
                android:layout_height="50dip"
                android:layout_weight="0.495"
                android:text="@string/btn_juice"
                android:textColor="@color/product_text_color1"
                android:background="@android:color/white"
                android:textSize="20sp"
                android:id="@+id/btn_juice"/>
    </LinearLayout>

    <View
            android:layout_width="match_parent"
            android:layout_height="1dip"
            android:background="@color/product_text_color1"/>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
        <Button
                android:layout_width="0dip"
                android:layout_height="50dip"
                android:layout_weight="0.495"
                android:text="@string/btn_energetik"
                android:textColor="@color/product_text_color1"
                android:background="@android:color/white"
                android:textSize="20sp"
                android:id="@+id/btn_energetik"/>

        <RelativeLayout
                android:layout_width="0dip"
                android:layout_height="50dip"
                android:layout_weight="0.01"
                android:background="@android:color/white">

            <View
                    android:layout_height="48dip"
                    android:layout_width="1dip"
                    android:background="@color/product_text_color1"
                    android:layout_centerInParent="true"/>

        </RelativeLayout>

        <Button
                android:layout_width="0dip"
                android:layout_height="50dip"
                android:layout_weight="0.495"
                android:text="@string/btn_bar"
                android:textColor="@color/product_text_color1"
                android:background="@android:color/white"
                android:textSize="20sp"
                android:id="@+id/btn_bar"/>
    </LinearLayout>
</LinearLayout>