<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/white"
    android:orientation="vertical" >

    <!-- <HorizontalScrollView -->
    <!-- android:id="@+id/horizontal_scroll_product" -->
    <!-- android:layout_width="wrap_content" -->
    <!-- android:layout_height="wrap_content"> -->

    <LinearLayout
        android:id="@+id/lin"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical" >

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent" >

            <LinearLayout
                android:id="@+id/list_content"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <RelativeLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content" >

                    <org.holoeverywhere.widget.TextView
                        android:id="@+id/title_item"
                        android:layout_width="fill_parent"
                        android:layout_height="30dip"
                        android:background="@color/wine_type_pink"
                        android:gravity="center"
                        android:height="30dip"
                        android:text=""
                        android:textColor="@android:color/white"
                        android:textSize="13dip"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:id="@+id/list_layout"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_below="@+id/title_item"
                        android:layout_marginRight="20dip"
                        android:layout_marginTop="10dip"
                        android:background="@android:color/transparent"
                        android:orientation="vertical" >

                        <org.holoeverywhere.widget.TextView
                            android:id="@+id/product_manufacturer"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="20dip"
                            android:textColor="@color/product_text_color1" />

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal" >

                            <ImageView
                                android:id="@+id/favourite_image"
                                android:layout_width="16dip"
                                android:layout_height="16dip"
                                android:layout_alignParentLeft="true"
                                android:layout_alignParentTop="true"
                                android:layout_marginLeft="4dip"
                                android:layout_marginTop="4dip"
                                android:src="@drawable/product_icon_favorite" />

                            <org.holoeverywhere.widget.TextView
                                android:id="@+id/product_name"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="20dip"
                                android:layout_marginTop="2dip"
                                android:password="false"
                                android:singleLine="false"
                                android:textColor="@android:color/black"
                                android:textSize="18dip"
                                android:textStyle="bold" />
                        </LinearLayout>

                        <org.holoeverywhere.widget.TextView
                            android:id="@+id/product_localizated_manufacturer"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="20dip"
                            android:layout_marginTop="1dip"
                            android:textColor="@color/product_text_color2" />

                        <org.holoeverywhere.widget.TextView
                            android:id="@+id/product_localizated_name"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="20dip"
                            android:layout_marginTop="1dip"
                            android:textColor="@color/product_text_color2" />

                        <org.holoeverywhere.widget.TextView
                            android:id="@+id/product_item_id"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="5dip"
                            android:layout_marginLeft="20dip"
                            android:layout_marginTop="1dip"
                            android:textColor="@color/product_text_color3" />

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dip"
                            android:layout_marginLeft="20dip"
                            android:background="@android:color/black" />
                        
                        <org.holoeverywhere.widget.TextView
                            android:id="@+id/product_single_itme_price"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="20dip"
                            android:layout_marginTop="7dip"
                            android:textColor="@color/product_text_color4"
                            android:textStyle="bold"
                            android:visibility="gone" />

                        <org.holoeverywhere.widget.TextView
                            android:id="@+id/product_region"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="20dip"
                            android:layout_marginTop="7dip"
                            android:textColor="@color/product_text_color4" />

                        <org.holoeverywhere.widget.TextView
                            android:id="@+id/product_sweetness"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="20dip"
                            android:layout_marginTop="3dip"
                            android:textColor="@color/product_text_color4" />

                        <org.holoeverywhere.widget.TextView
                            android:id="@+id/product_style"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="20dip"
                            android:layout_marginTop="3dip"
                            android:textColor="@color/product_text_color4" />

                        <org.holoeverywhere.widget.TextView
                            android:id="@+id/product_grapes"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="20dip"
                            android:layout_marginTop="3dip"
                            android:textColor="@color/product_text_color4" />

                        <org.holoeverywhere.widget.TextView
                            android:id="@+id/product_alcohol"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="20dip"
                            android:layout_marginTop="3dip"
                            android:textColor="@color/product_text_color4" />

                        <org.holoeverywhere.widget.TextView
                            android:id="@+id/product_volume"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="20dip"
                            android:layout_marginTop="3dip"
                            android:textColor="@color/product_text_color4" />

                        <org.holoeverywhere.widget.TextView
                            android:id="@+id/product_year"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="20dip"
                            android:layout_marginTop="3dip"
                            android:textColor="@color/product_text_color4" />

                        <view
                            android:id="@+id/retail_price_label"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="20dip"
                            android:layout_marginTop="3dip"
                            class="org.holoeverywhere.widget.TextView" />

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="15dip" />
                    </LinearLayout>

                    <TextView
                        android:id="@+id/add_to_shopping_cart_animate"
                        android:layout_width="215dip"
                        android:layout_height="350dip"
                        android:gravity="center_horizontal|bottom"
                        android:text="asdqw"
                        android:textColor="@color/product_price_color"
                        android:textSize="20sp"
                        android:visibility="gone" />

                    <ImageView
                        android:id="@+id/product_image"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/title_item"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="15dip"
                        android:layout_toRightOf="@+id/list_layout"
                        android:adjustViewBounds="false"
                        android:contentDescription="@string/app_name"
                        android:cropToPadding="true"
                        android:scaleType="matrix"
                        android:src="@drawable/product_default_image" />
                </RelativeLayout>
            </LinearLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/list_content" >

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/retail_price"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:layout_alignParentLeft="true"
                        android:layout_marginLeft="20dip"
                        android:layout_marginTop="10dip"
                        android:text="@string/text_for_retail_price" />

                    <LinearLayout
                        android:id="@+id/old_price_container"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginLeft="20dip" >

                        <TextView
                            android:id="@+id/old_price"
                            style="@style/OldPrice"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/old_price" />

                        <TextView
                            android:id="@+id/old_price_value"
                            style="@style/OldPrice"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dip" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/linear_for_two_button"
                        android:layout_width="match_parent"
                        android:layout_height="45dip"
                        android:layout_alignParentBottom="true"
                        android:layout_marginBottom="5dip"
                        android:layout_marginLeft="10dip"
                        android:layout_marginRight="2dip"
                        android:layout_marginTop="5dip"
                        android:gravity="center"
                        android:orientation="horizontal"
                        android:paddingRight="18dip" >

                        <RelativeLayout
                            android:layout_width="0dip"
                            android:layout_height="match_parent"
                            android:layout_marginLeft="3dip"
                            android:layout_marginRight="3dip"
                            android:layout_weight="4" >

                            <org.holoeverywhere.widget.Button
                                android:id="@+id/add_to_shopping_cart_butt"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:background="@drawable/product_info_shopping_cart_butt_selector"
                                android:drawableLeft="@drawable/add_to_shopping_cart"
                                android:textColor="@color/product_price_color"
                                android:textStyle="bold" />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:gravity="center"
                                android:textColor="@color/product_price_color"
                                android:visibility="invisible" />
                        </RelativeLayout>

                        <org.holoeverywhere.widget.Button
                            android:id="@+id/shops_butt"
                            android:layout_width="0dip"
                            android:layout_height="match_parent"
                            android:layout_marginLeft="3dip"
                            android:layout_marginRight="3dip"
                            android:layout_weight="3"
                            android:background="@drawable/product_info_shopping_cart_butt_selector"
                            android:text="Где купить?"
                            android:textColor="@color/product_text_color4" />
                    </LinearLayout>
                </LinearLayout>

                <TextView
                    android:id="@+id/add_to_basket_animate_first_part"
                    android:layout_width="match_parent"
                    android:layout_height="80dip"
                    android:layout_marginLeft="85dip"
                    android:gravity="center_vertical"
                    android:orientation="vertical"
                    android:text="qweasdqwe"
                    android:textColor="@color/product_price_color"
                    android:textSize="20sp"
                    android:visibility="invisible" >
                </TextView>
            </RelativeLayout>
        </RelativeLayout>
    </LinearLayout>
    <!-- </HorizontalScrollView> -->

</LinearLayout>